--- a/style.css
+++ b/style.css
@@ -10,11 +10,29 @@
     background: linear-gradient(135deg, #153677, #4e085f);
     padding: 10px;
 }
+.tools{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.container .tools h1{
+    margin: 1.5rem auto 0;
+    color: white;
+    text-align: center;
+}
+.container .tools #start-button{
+    background-color: aqua;
+    border: none;
+    border-radius: 15px;
+    margin: 1rem 1rem;
+    width: 5rem;
+    height: 2rem;
+}
 .grid{
     width: 100%;
     max-width: 540px;
-    background: rgb(255, 255, 255);
-    margin: 100px auto 20px;
+    border: 2px solid white;
+    margin: 30px auto 20px;
     padding: 40px 30px 70px;
     border-radius: 10px;
 }
