--- a/style.css
+++ b/style.css
@@ -38,9 +38,9 @@ select:hover{
 .main-grid{
     width: 100%;
     max-width: 540px;
-    border: 2px solid white;
+    /* border: 1px solid black; */
     margin: 30px auto 20px;
-    padding: 40px 30px 70px;
+    /* padding: 40px 30px 70px; */
     border-radius: 10px;
     display: flex;
     flex-wrap: wrap;
@@ -53,6 +53,7 @@ div.main-grid article.squareEl{
     width: calc(100% / 9);
     height: calc(100% / 9);
     border: 2px solid black;
-    font-size: 2.5rem;
-    font-weight: bold;
+    font-size: 2rem;
+    font-weight: 500;
+    color: white;
 }
